fixed embed from overlapping sidebar link

--- a/_sass/template/components/_component--media-video.scss
+++ b/_sass/template/components/_component--media-video.scss
@@ -8,6 +8,7 @@
 .media-video {
 	@include grid-child($col-start: 1, $cols: 12);
 	@include stack(sm);
+	z-index: -10;
 
 	.img-wrapper,
 	.vid-wrapper {
